--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "test/test",
     "require": {
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
